--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -15,6 +16,7 @@
     "mockjs": "^1.1.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "multiparty": "^4.2.3",
     "mysql": "^2.18.1",
     "winston": "^3.8.1"
   }
