--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fs": "^0.0.1-security",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "mockjs": "^1.1.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
